# cerebro_digital

./: Procfile  build.sh  db.sqlite3  descarga.jfif  descarga_d250DNR.jfif  mail_prueba.py  manage.py  pyproject.toml  render  render.yaml  requirements.txt  wayForward.txt
cerebroDigital/: asgi.py  settings.py  urls.py  wsgi.py
deporteTrack/: apps.py
notasPensamiento/: admin.py  apps.py  models.py  views.py
notasPensamiento/migrations/: 0001_initial.py  0002_auto_20220910_1427.py  0003_auto_20220911_1539.py  0004_auto_20220911_1542.py  0005_auto_20220911_1545.py  0006_referencia_en_bibliografia.py  0007_alter_extracto_pensar.py  0008_auto_20220911_1606.py  0009_tipo_existe.py  0010_auto_20220911_1754.py  0011_alter_zettelcasten_etiqueta.py  0012_auto_20220919_1435.py  0013_auto_20220926_1035.py  0014_extracto_comentario_alter_etiqueta_etiqueta_hijo_and_more.py
notasPensamiento/templatetags/: filtros_templates.py
static/: script.js  style.css
templates/: .gitignore  bibliografia.html  crear_zettle.html  index.html  mostrar_aleatorio.html  mostrar_extracto.html  mostrar_referencias.html  mostrar_subrayados.html  mostrar_zettle_ind.html  mostrar_zettlecasten.html  nuevo_biblio.html  nuevo_extracto.html  nuevo_zettel.html  nuevos_items.html  rel_zet.html  relacionar_zettel_lista.html  unico_biblio.html
templates/copia_seguridad/: index.html  style.css
